[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/tangram/quad.png" type="Texture" id=1]
[ext_resource path="res://scripts/tangram/quad.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="Area2D" type="Area2D"]
script = ExtResource( 2 )

[node name="Quad" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Area2D_mouse_exited"]
